# RAG

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  CICD_SETUP.md  DATA_SCRAPING_MANUAL.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DOCKERFILE_FIXES.md  Dockerfile.api  ENV_VAR_REVIEW.md  INDEX.md  Makefile  PACKAGE_INSTALLATION_EXPLAINED.md  QUICKSTART.md  README_DEPLOYMENT.md  SETUP_FOR_REPO_OWNER.md  START_HERE.md  STEP_BY_STEP.md  YOUR_DEPLOYMENT_READY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yaml  extract_failed_resumes.py  gcp-setup.sh  get_resume.py  mongo-init.js  nginx.conf  plan.txt  pyproject.toml  reproduce_summary.py  requirements.minimal.txt  requirements.txt  resume-api.service  resume_text.json  run_failed_resume_recovery.py  run_scrp_ingestion.py  setup.py  test_api.sh  (+10 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.github/: README.md
.github/workflows/: deploy.yml  test.yml
docs/scripts_details/: failed_resume_recovery_implementation.md
notebooks/: data_injestion.ipynb  data_tranfromation.ipynb  doman_dict.py  resumeURL-collection.ipynb  samples.json  test.ipynb  test.py
notebooks/data-scraping-KT/: documentation.ipynb  scraping_utils[post].py
notebooks/resume_scraping/: data_scraping.ipynb  resumeURL-collection.ipynb  scraping.ipynb  scraping_utils.py  scraping_v2.ipynb  test.ipynb  test.py
notebooks/vLLM/: notes.txt  run_llama8b.ipynb
rag_infra/ml-ops-env-experiment-main/: README.md
src/: config.yaml  core.py  main.py  prompt.txt  run_ingestion_pipeline.py  run_setup_pipeline.py  token_counting.ipynb  vector_ingestion.py
src/api/: generate_resume.py  get_unique_job_roles.py  parser_resume.py  resume_chat.py  user_resumes.py  webhook.py  webhook_service.py
src/apis/: parser_resume.py  scrape_data.py  test.ipynb
tests/: QDRANT_CONNECTION_FIX.md  reproduce_retrieval.py  test_chat_service.py  test_date_parser.py  test_groq.py  test_hybrid_api.py  test_llm.py  test_llm_simple.py  test_qdrant_connection.py  test_refactor_verification.py  test_retriaval_2.py  test_section_hybrid.py  test_section_no_filter.py  test_section_search_simple.py
(+74 files in other folders)
