[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "html2text>=2025.4.15",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "lxml>=6.0.2",
    "qdrant-client>=1.15.1",
    "rapidfuzz>=3.14.1",
    "sentence-transformers>=5.1.1",
]
