[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "html2text>=2025.4.15",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "lxml>=6.0.2",
    "numpy==2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.15.1",
    "rapidfuzz>=3.14.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy-utils>=0.42.0",
    "tqdm>=4.67.1",
    "zenml[server]>=0.90.0",
]
