[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "docx2txt>=0.9",
    "fitz>=0.0.1.dev2",
    "html2text>=2025.4.15",
    "instructor>=1.12.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "lxml>=6.0.2",
    "numpy==2.2",
    "pdfplumber>=0.11.7",
    "phonenumbers>=9.0.17",
    "playwright>=1.55.0",
    "pydantic[email]>=2.11.9",
    "pydantic-extra-types>=2.10.6",
    "pymupdf>=1.26.5",
    "pyresparser>=1.0.6",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "qdrant-client>=1.15.1",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.5",
    "scrapegraphai>=1.63.1",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.7",
    "zenml==0.91.0",
    "fastapi>=0.121.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "pymongo>=4.15.3",
    "pyversity>=0.1.0",
    "wordfreq>=3.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
